# mimic

./: .gitignore  CMakeLists.txt  CMakeLists_NAS.txt  CMakeLists_worklaptop.txt  LICENSE  MacOSX_Dirk_work.cmake  Makefile  Makefile_OSX_Dirk  Makefile_pleiades  README.md  adapt.h  adapt_array.h  adapt_compute.cpp  adapt_compute.h  adapt_datastruct.h  adapt_datatype.h  adapt_geometry.cpp  adapt_geometry.h  adapt_io.cpp  adapt_io.h  adapt_math.cpp  adapt_math.h  adapt_operations.cpp  adapt_operations.h  adapt_output.cpp  adapt_output.h  adapt_parmetisstate.h  adapt_parstate.h  adapt_part_func.cpp  adapt_part_func.h  adapt_partition.cpp  adapt_partition.h  adapt_partition_mgg_grad_rec_working.cpp  adapt_recongrad.cpp  adapt_recongrad.h  adapt_recongrad2.h  adapt_schedule.cpp  adapt_topology.cpp  adapt_topology.h  build_boost.sh  (+53 more)
BaseMeshGenerator/: CMakeLists.txt  c_stl2step.py  convert_stl_2_step.py  main.cpp
US3D_Routine/: Makefile  a.out  us3d_user.F90
cases/: conn2.h5  data2.h5  grid2.h5
cmake/: ThirdPartyCGAL.cmake  ThirdPartyESP.cmake  ThirdPartyGKlib.cmake  ThirdPartyGSL.cmake  ThirdPartyHDF5.cmake  ThirdPartyMMG.cmake  ThirdPartyMetis.cmake  ThirdPartyMetisv2.cmake  ThirdPartyOCCT.cmake  ThirdPartyParMMG.cmake  ThirdPartyParmetis.cmake  ThirdPartyTetGen.cmake  ThirdPartyVTK.cmake  ThirdPartyZLIB.cmake
gradient_unit_test/: conn.h5  data.h5  grid.h5
graveyard/: code_2_check.cpp  main_mmg_par.cpp  old_func.cpp  svd_example.cpp
inputs_msl_pleiades/: conn.h5  data.h5  grid.h5  metric.inp
machines/: machine_home.cmake  machine_worklaptop.cmake
madamPy/: PyPartiClass.cpp  makefile
mimic.hs/: CMakeLists.txt  README.md  convertsu2_2_vtk_v2.py  main.cpp
mimic.hs/tools/: hypersolve_computehessian.py  run_hypersolve-mimic.sh  snap_to_hdf5_hessian.py
mimic.msh/: CMakeLists.txt  main.cpp  main_faces.cpp
mimic.pyfrm/: CMakeLists_NAS.txt  main.cpp
mimic.us3d/: CMakeCache.txt  CMakeLists.txt
mimic_user_guide/: elsarticle-template-num.top  main.tex  ref.bib  sample.bib  sample2.bib
platforms_cmake/: MacOSX_Dirk_work.cmake
platforms_make/: osxdirk.mk  pleiades.mk
pymimic/: NekFace.optrpt  PyPartiClass.cpp  PyPartiClass.optrpt  adapt_DefinePrismMesh.optrpt  adapt_bltopology.optrpt  adapt_boundary.optrpt  adapt_compute.optrpt  adapt_distri_parstate.optrpt  adapt_elements.optrpt  adapt_geometry.optrpt  adapt_gradientReconstruction.optrpt  adapt_gradreconstruct_lite.optrpt  adapt_inputs.optrpt  adapt_io.optrpt  adapt_math.optrpt  adapt_meshtopology_lite.optrpt  adapt_operations.optrpt  adapt_output.optrpt  adapt_parops.optrpt  adapt_parstate.optrpt  adapt_partition.optrpt  adapt_partobject.optrpt  adapt_partobject_lite.optrpt  adapt_prepareadaption.optrpt  adapt_prismaticlayer.optrpt  (+21 more)
unit_tests/cuda_test_v2/: CMakeLists.txt  README.txt  main.cpp
unit_tests/metric_distance/: CMakeLists.txt  main.cpp
unit_tests/metric_distance/src/: adapt_array.h  adapt_hashutils.h  adapt_metricdistance.cpp  adapt_metricdistance.h  adapt_parstate.h
utilities/: CMakeLists.txt
utilities/Galerkin_Projection/: CMakeLists.txt  main.cpp
utilities/Galerkin_Projection/cmake/: ThirdPartyCFDTools.cmake  ThirdPartyEigen.cmake  ThirdPartyGMP.cmake  ThirdPartyMMG.cmake
utilities/convertHex2Hybrid/: main.cpp
utilities/convertHex2Hybrid_new/inputs/: conn.h5  data.h5  grid.h5
utilities/convertUS3D_to_CGNS/: CMakeLists.txt  NAS_Dirk_work.cmake  main.cpp
utilities/convertUS3D_to_Nektar++/: main.cpp
utilities/convertUS3D_to_Nektar++_w_SinglePrismLayer/: main.cpp
utilities/createPlane/: CMakeLists.txt  main.cpp  main_delaunay_self.cpp  main_surface.cpp  main_test_geometries.cpp  main_test_geometries_old.cpp  mesh_from_cad.cpp
utilities/extractBL/: main.cpp
utilities/generatePrisms/: CMakeLists.txt  main.cpp
utilities/generate_forebody_mesh/: compare_before_after.py  mesh_forebody_fixed_clean.py  projected_square_patch.msh  your_model.iges
utilities/mimic.msh/: CMakeLists.txt
utilities/mimic.msh/cmake/: ThirdPartyLibMeshb.cmake  ThirdPartyParmetis.cmake  ThirdPartyTetGen.cmake  ThirdPartyZLIB.cmake
utilities/mimic.pyfrm/: CMakeLists.txt  main.cpp  main_su2.cpp  read_pyfrm.py
utilities/mimic.pyfrm/cmake/: ThirdPartyMetis.cmake
utilities/mimic.su2/: CMakeLists.txt  convertsu2_2_vtk.py
utilities/mimic.su2/cmake/: ThirdPartyHDF5.cmake
utilities/outputMetric/: CMakeLists.txt  CMakeLists_NAS.txt  main.cpp
utilities/outputMetric/cmake/: ThirdPartyCGAL.cmake  ThirdPartyMMG.cmake
utilities/partitionTetrahedra/: CMakeLists.txt  CMakeLists_NAS.txt  NAS_Dirk_work.cmake  main.cpp  makefile
utilities/partitionTetrahedra/cmake/: .ThirdPartyHDF5.cmake.swp  ThirdPartyHDF5.cmake.old  ThirdPartyParMMG.cmake
utilities/partitionTetrahedra/test_data/inputs/: input.inp  metric.inp
utilities/partitionTetrahedra/test_data/ref_data/: UVariaValues_0.txt  UVariaValues_1.txt  UVariaValues_10.txt  UVariaValues_11.txt  UVariaValues_12.txt  UVariaValues_13.txt  UVariaValues_14.txt  UVariaValues_15.txt  UVariaValues_16.txt  UVariaValues_17.txt  UVariaValues_18.txt  UVariaValues_19.txt  UVariaValues_2.txt  UVariaValues_20.txt  UVariaValues_21.txt  UVariaValues_22.txt  UVariaValues_23.txt  UVariaValues_24.txt  UVariaValues_25.txt  UVariaValues_26.txt  UVariaValues_27.txt  UVariaValues_3.txt  UVariaValues_4.txt  UVariaValues_5.txt  UVariaValues_6.txt  UVariaValues_7.txt  UVariaValues_8.txt  UVariaValues_9.txt
utilities/readLibMesh/: CMakeLists.txt  main.cpp
utilities/readSU2/: CMakeLists.txt  NAS_Dirk_work.cmake  getBCsfromSU2.py  main.cpp  main_faces.cpp
utilities/readSU2inParallel/: CMakeLists.txt  NAS_Dirk_work.cmake  main.cpp
utilities/runParVoro++/: CMakeLists.txt  NAS_Dirk_work.cmake  main.cpp
utilities/runParVoro++/cmake/: adaptCommon.cmake
utilities/tesselatePrisms/: CMakeLists.txt  main.cpp
utilities/tesselateRemainder/: CMakeLists.txt  main.cpp
utilities/tesselateSurf/: CMakeLists.txt  main.cpp  main_new.cpp  main_old.cpp
utilities/useESP/: CMakeLists.txt  main.cpp
utilities/useOCCT/: CMakeLists.txt  main.cpp  main_voxel_ibm.cpp  mesh_around_sphere.cpp
(+222 files in other folders)
